--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloock&family=Inter:wght@300;400;600&family=Ultra&display=swap');
 
 :root {
-    --grey: rgb(234, 234, 234);
+    --grey: rgb(239, 239, 239);
     --red: rgb(234, 16, 85);
     --accent: rgb(215, 138, 203);
     --ink: rgb(79, 39, 131);
@@ -16,6 +16,12 @@
 * {
     font-family: var(--mainFont);
     font-weight: 400;
+
+}
+
+html body {
+    padding: 0;
+    margin: 0;
 }
 
 .hover-wrapper > .hover {
@@ -29,11 +35,36 @@
 
 .hover-wrapper:hover > .hover {
     display: block;
+    position: absolute;
     padding: 0;
     margin: 0;
-    margin-right: 10px;
-    color: var(--inkLight);
+    margin-top: 120px;
+    margin-right: 0px;
+    color: var(--ink);
     background-color: var(--white);
+
+    text-align: center;
+}
+
+.nav-button-wrapper {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    margin: 0 5px 0 5px;
+}
+
+.nav-writing {
+    font-size: 15px;
+}
+
+a.active {
+    text-decoration: underline;
+}
+
+.hover-wrapper :hover > .nav-perm {
+    text-decoration: underline;
 }
 
 .hover-wrapper {
@@ -49,14 +80,169 @@
 
 .grid {
     display: grid;
+    align-items:center;
+    justify-items:center;
+
+    padding: 10px;
+
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0px;
+}
+
+.grid-overflow {
+    display: grid;
+    align-items:center;
+    justify-items:center;
+
+    max-height: calc(33vw + 2px);
+
+    padding: 10px;
+
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0px;
+
+    grid-template-rows: none;
+
+    overflow: hidden;
+}
+
+.flex-box {
+    display: flex;
+}
+
+.inline-grid {
+    display: inline-grid;
 
     grid-template-columns: auto;
+    grid-gap: 10px;
+
+}
+
+.inline-grid-item {
+    aspect-ratio: 1;
+    width: auto;
+}
+
+.project-grid-item {
+    display: block;
+    width: fit-content;
+
+    padding: 10px;
+
+    position: relative;
+    
+    aspect-ratio: 1;
+
+    overflow: hidden;
+}
+
+
+.bottom {
+    position: absolute;
+    margin: auto;
+    bottom: 10px;
+}
+
+.grid-border {
+    border: solid white 2px;
+    background-color: var(--grey);
 }
 
 .button {
     font-family: var(--mainFont);
-    font-weight: 300;
-    font-size: 25px;
+    font-weight: 400;
+    font-size: 20px;
+
+    border-radius: 5px;
+
+    display: block;
+
+    color: var(--red);
+    border: solid 2px var(--red);
+    background-color: white;
+
+    margin: 20px 20px 20px 20px;
+}
+
+.red {
+    color: var(--red);
+}
+
+.flex-nav {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+    position: relative;
+
+
+    top: 10px;
+    height: min-content;
+
+    z-index: 100;
+}
+
+.nav-left {
+    max-width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+    position: relative;
+
+    right: auto;
+    left: 10px;
+    top: 10px;
+    height: min-content;
+
+    z-index: 100;
+}
+
+.nav-center {
+    max-width: auto;
+
+    position: relative;
+
+    display: flex;
+
+    flex-direction: row;
+
+    height: min-content;
+
+    top: 10px;
+    z-index: 100; 
+}
+
+.nav-right {
+    max-width: auto;
+    display: flex;
+
+    flex-direction: row;
+
+    position: relative;
+
+    right: 10px;
+    left: auto;
+    
+    top: 10px;
+    height: min-content;
+
+    z-index: 100; 
+}
+
+.flex-shrink-1 {
+    flex-shrink: 1;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.align-baseline {
+    align-items: baseline;
 }
 
 .nav-button {
@@ -70,21 +256,19 @@
     border-style: solid;
     border-width: 2px;
 
-    border-color: var(--inkLight);
+    border-color: var(--ink);
 
     
-    background-color: var(--white);
+    background-color: transparent;
 }
 
 .nav-symbol {
-    color: var(--inkLight);
+    color: var(--ink);
 }
 
 .hover-wrapper:hover > .nav-button {
 
     background-color: var(--grey);
-    border-color: var(--ink);
-    color: var(--ink);
 
 }
 
@@ -105,13 +289,15 @@
     justify-content: space-between;
 }
 
-.title {
+.logo {
     font-family: var(--titleFont);
-    font-size: 50px;
-    font-weight: 700;
+    font-size: 25px;
+    font-weight: 500;
     text-decoration: none;
 
     color: var(--ink);
+
+    display: none;
 }
 
 a {
@@ -121,21 +307,342 @@ a {
 header {
     height: fit-content;
     background-color: var(--white);
+
+    border-bottom: var(--grey) solid 2px;
+
+
+
+    width: 100%;
+    top: 0;
+
+    margin: 0;
+    padding: 0;
+    left: auto;
+    right: auto;
+
+    background-color: var(--white);
+
+    z-index: 100;
+}
+
+.header-offset {
+    height: 80px;
+    margin: 0;
+    padding: 0;
 }
 
 .inline-container {
     display: inline;
 }
 
-.flex-nav {
-    max-width: 33vw;
-    display: flex;
-    align-items: last baseline;
-    justify-content:flex-start;
-    flex-direction: column;
+.text-section {
+    display: block;
+    border: solid var(--grey) 0px;
 
-    position: fixed;
+    margin: 25px;
 
-    right: 10px;
-    height: min-content;
+    padding: 10px;
+
+    height: fit-content;
 }
+
+.text-section > * {
+
+}
+
+.slideshow {
+    display: block;
+    border: solid var(--grey) 0px;
+
+
+
+    margin: 25px;
+
+    padding: 0px;
+
+    height: fit-content;
+}
+
+.no-pad {
+    padding: 0;
+}
+
+.small-margin {
+    margin-right: 5vw;
+    margin-left: 5vw;  
+}
+
+.small-block {
+    display: block;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.large-block {
+    display: block;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.large-margin {
+    margin-right: 20vw;
+    margin-left: 20vw;
+}
+
+.no-pad {
+    padding: 0;
+}
+
+.no-margin {
+    margin: 0;
+}
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.project-image {
+    aspect-ratio: auto;
+    width: 80vw;
+    height: auto;
+}
+
+.large-image {
+    width: 90vw;
+}
+
+.full-screen-image {
+    width: 100vw;
+
+    aspect-ratio: auto;
+
+    display: block;
+
+    margin: auto;
+    padding: 0;
+}
+
+
+.form-group {
+    padding: 0;
+    margin: 0;
+
+}
+
+.form-control {
+    font-family: var(--mainFont);
+    font-weight: 400;
+    font-size: 20px;
+
+    border-radius: 5px;
+
+    display: block;
+
+    color: var(--ink);
+    border: solid 2px var(--ink);
+    background-color: white;
+
+    margin: 10px;
+
+    width: 40vw;
+}
+
+.form-control-footer {
+    font-family: var(--mainFont);
+    font-weight: 400;
+    font-size: 20px;
+
+    display: block;
+
+    color: var(--black);
+    border: solid 2px var(--ink);
+    background-color: white;
+
+    margin: 10px;
+
+    width: 100%;
+}
+
+.content {
+    display: block;
+    width: 100%;
+
+    position: relative;
+}
+
+.horizontal {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+textarea .form-control {
+    resize: none;
+    text-align: center;
+}
+
+textarea .form-control-footer {
+    text-align: left;
+    display: block;
+    width: 100%;
+}
+
+.message-box {
+    width: inherit;
+}
+
+.flex-image {
+    width: 30vw;
+}
+
+.no-bullets {
+    list-style-type: none;
+}
+
+.contact-form {
+    position: relative;
+}
+
+.grey {
+    background-color: var(--grey);
+}
+
+.text-align-center {
+    text-align: center;
+}
+
+.two-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.list-center {
+
+    display: block;
+
+    position: relative;
+
+    margin: 0;
+    padding: 0;
+}
+
+.block-child-center-vertical {
+
+    text-align: center;
+
+    position: absolute;
+
+    left: 0;
+    right: 0;
+
+    margin-top: 70px;
+    
+    float: top;
+    height: 50%;
+    width: 100%;
+}
+
+footer {
+    display: block;
+    width: 100%;
+    position: relative;
+
+    background-color: var(--grey);
+    color: var(--ink);
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    min-height: 50vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.link {
+    color: var(--ink);
+    text-decoration: none;
+}
+
+.link :hover {
+    text-decoration: underline;
+}
+
+.footer-scheme {
+    background-color: var(--grey);
+    color: var(--ink);
+}
+
+.flex-page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.flex-content {
+    flex: 1 0 auto;
+}
+
+.flex-footer {
+    flex-shrink: 0;
+}
+
+.title {
+    font-family: var(--titleFont);
+    font-size: 65px;
+    font-weight: 700;
+    text-decoration: none;
+
+    color: var(--ink);
+}
+
+.sub-title {
+    font-family: var(--mainFont);
+    font-size: 50px;
+    font-weight: 700;
+    text-decoration: none;
+
+    color: var(--inkLight); 
+}
+
+.heading {
+    font-family: var(--mainFont);
+    font-size: 25pt;
+    color: var(--ink);
+}
+
+.sub-heading {
+    font-family: var(--mainFont);
+    font-size: 15pt;
+    color: var(--lightInk);
+}
+
+.text {
+    font-family: var(--mainFont);
+    font-size: 12pt;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wrap-item {
+    flex-grow: 0.5;
+    flex-shrink: 0.5;
+    flex-basis: clamp(25vw, 33vw, 0.5vw);
+    aspect-ratio: clamp(1.5, 1, 1);
+}
+
+.wrap-item * {
+    border: black solid 0px;
+}
+
+.square {
+    padding: 15px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
+
