--- a/src/styles.css
+++ b/src/styles.css
@@ -641,11 +641,84 @@ footer {
 }
 
 .square {
-    padding: 15px;
-    padding-bottom: 20px;
-    overflow: hidden;
+    aspect-ratio: 1;
+    background-size: contain;
+
 }
 
 .border {
     border: 2px solid var(--ink);
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+
+    flex-direction: row;
+
+    justify-content: center;
+
+    align-items: center;
+
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding: 20px;
+
+    border: 0px black solid;
+
+    gap: 20px;
+}
+
+.display-none {
+    display: none;
+}
+
+.gallery-item {
+
+    list-style-type: none;
+
+    flex-grow: 1;
+
+    flex-basis: 0;
+
+    padding: 0px;
+
+    max-width: 500px;
+
+    min-width: 300px;
+
+    border: 2px solid var(--grey);
+
+    position: relative;
+}
+
+.hover-wrapper {
+    
+}
+
+.become-visible {
+    display: none;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    margin: 0;
+}
+
+.hover-wrapper:hover > .become-visible {
+    display: block;
+    transition-duration: 0.3s;
+}
+
+.fill-parent {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    padding: 0;
 }
